log
Thu 16 May 2024 07:23:04 AM UTC: 
 tests:  0|5
total_score: 0/70
0baa163
Thu 16 May 2024 07:24:14 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:69:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   69 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
3c1aac6
Fri 17 May 2024 03:33:02 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:86:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   86 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e935980
Fri 17 May 2024 03:33:20 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
c540526
Fri 17 May 2024 03:34:20 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|3
total_score: 30/70
fcbddfe
Fri 17 May 2024 03:37:34 AM UTC: 
 sudoku.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
437f4c7
Sun 19 May 2024 12:40:27 AM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  6|2
total_score: 45/70
125ffe5
Sun 19 May 2024 12:41:39 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
1554d4e
Sun 19 May 2024 12:43:47 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
0dfc45e
Sun 19 May 2024 12:44:20 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
3a8779f
Sun 19 May 2024 12:44:59 AM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
f7778e1
Sun 19 May 2024 12:45:59 AM UTC: 
 sudoku.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  10|0
total_score: 70/70
aa50bd4
